# autoppia_bittensor_dashboard_backend

./: .coveragerc  .env.example  .gitignore  =5.0.0  DEV_SETUP.md  Dockerfile  ENDPOINTS_SUMMARY.md  ENDPOINT_REFERENCE.md  FRONTEND_CHANGES.md  IWAP_USAGE.md  LOGGING.md  LOGGING_QUICKSTART.md  OPTIMIZED_MINER_ENDPOINTS.md  README.md  README_ENDPOINT.md  REDIS_INSIGHT_GUIDE.md  REDIS_SETUP.md  SEASON_REUSE_CHANGES.md  VALIDATOR_INTEGRATION_GUIDE.md  autoppia.db  background_updater.py  demo_api.py  docker-compose.yml  ecosystem.config.js  example_response.json  fill_agent_recent_rounds.py  fill_agent_run_stats.py  fix_redis_server.sh  flush_simple.py  invalidate_cache.py  materialize_all_rounds.sh  materialize_rounds_simple.py  nginx_default.conf  package-lock.json  pyproject.toml  random_data_generator.py  requirements.txt  run.sh  run_dev.sh  run_tests.py  (+16 more)
.github/: dependabot.yml
.github/scripts/: pip_audit_count.py
.github/workflows/: codeql.yml  coverage.yml  quality-checks.yml  sonarcloud.yml
app/: __init__.py  config.py  logging.py  main.py  openapi.py
app/api/: deps.py
app/data/: __init__.py  validator_directory.py
app/db/: base.py  mock_mongo.py  models.py  mongo.py  session.py
app/middleware/: __init__.py  logging_middleware.py
app/models/: __init__.py  agents.py  core.py  miner_list.py  miners.py  schemas.py  tasks.py  ui.py
app/scripts/: __init__.py  backfill_snapshots.py  cache_warmer.py  export_openai_finetune_dataset.py  finetune.py
app/services/: agent_runs_service.py  agents_service.py  cache.py  cache_ttl.py  chain_state.py  collection_optimizer.py  data_builder.py  database_service.py  evaluations_service.py  idempotency.py  media_storage.py  metagraph_service.py  metagraph_updater_thread.py  miner_list_service.py  miners_service.py  overview_cache_updater.py  overview_service.py  redis_cache.py  round_calc.py  round_config_from_db.py  round_config_service.py  rounds_service.py  seed_utils.py  service_utils.py  smart_cache.py  snapshot_service.py  subnet_timeline.py  subnet_utils.py  tasks_service.py  validator_auth.py  validator_directory.py  validator_storage.py
app/utils/: datetime.py  images.py  score_formatter.py  urls.py  validation.py
apps/database/: mongo_service.py
apps/metric/: apps.py  urls.py  views.py
apps/task/: apps.py  urls.py  views.py
apps/validator_runs/: apps.py  urls.py  views.py
config/: env.example  logging.env.example  urls.py
config/api/: schema.yaml
config/database/: mongo-init.js
config/settings/: base.py  dev.py  prod.py
data/mock/: agent_evaluation_runs.json  evaluation_results.json  rounds.json  rounds_1_to_20.json  task_solutions.json  tasks.json
deployment/docker/: Dockerfile  docker-compose.yml
deployment/scripts/: start.sh
deprecated_tests/: performance_test.py  submit_test_data.py
deprecated_tests/testing/: debug_validation.py  example_submission.json  simple_validation_test.py  test_data_validation.py  test_endpoints.py
docs/: CORE_MODELS_IMPROVEMENTS.md  MODELO_SIMPLIFICADO_SEASON_LEADER.md  OPTIMIZATION_GUIDE.md  README.md  README_NEW_DB_STRUCTURE.md  TEST_ZERO_REASON.md  backend_agent_detail.json  backend_samples.json  backend_section_reference.md  how_iwap_work.md
docs/api/: API_DOCUMENTATION.md
mock_data/: agent_evaluation_runs.json  rounds.json  task_executions.json  tasks.json
reports/: optimized_performance.json  performance_no_cache.json  performance_with_cache.json
scripts/: MEMORY_LEAK_ANALYSIS.md  PRODUCTION_DEPLOY.md  README.md  __init__.py  backfill_reused_run_stats.py  background_updater.py  check_evaluation_columns.py  check_tables.py  curl_examples.sh  db_utils.py  export_tasks_by_season.py  flush.py  flush_db.py  flush_simple.py  generate_complete_rounds_data.py  generate_realistic_data.py  generate_rounds_1_to_20.py  inspect_validator_rounds_db.py  iwap.py  optimize_existing_data.py  redis_compose.sh  run_migration_is_reused.py  run_migration_rename_table.py  seed_database.py  seed_minimal_complete.py  seed_round.py  seed_season_round_data.py  seed_simple.py  seed_stress_test.py  setup_logging.py  start_dev.sh  stop_dev.sh  test_delete_round_after_crash.py  test_evaluations_performance.py  test_validator_detail_performance.py
seeding/: __init__.py  flush.py  validator_round.py
tests/: conftest.py  test.db  test_agent_run_and_metrics.py  test_cache_force.py  test_chain_state.py  test_evaluation_gif_upload.py  test_idempotency_unit.py  test_images_utils.py  test_progressive_validator_flow.py  test_redis.py  test_round_calc_unit.py  test_round_chain_validation.py  test_round_validators_fallbacks.py  test_season_round_endpoints.py  test_subnet_timeline.py  test_tasks_with_solutions.py  test_ui_agents_runs_helpers.py  test_ui_endpoint_latency.py  test_ui_no_chain_fetch_on_get.py  test_ui_rounds_leadership_chain.py  test_validator_auth.py  test_validator_auth_live_threshold.py  test_validator_endpoints.py  test_validator_round_gif_flow.py  test_validator_round_start_lifecycle_unit.py  test_validator_stakes_live.py  verify_fix_sonar_behavior.py
(+173 files in other folders)
