[project]
name = "leaderboard-api"
version = "0.1.0"
description = "Autoppia Leaderboard API - FastAPI backend for Bittensor validator data"
authors = [
    {name = "Autoppia Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and ASGI server
    "fastapi>=0.110.1,<0.111",
    "uvicorn[standard]>=0.30.0",
    # Data validation and settings
    "pydantic==2.8.0",
    "pydantic-settings>=2.4.0",
    # SQL database support
    "SQLAlchemy>=2.0.30",
    "asyncpg>=0.29.0",
    # Redis cache support
    "redis>=5.0.0",
    # Environment management
    "python-dotenv>=1.0.0",
    # AWS integration
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    # Validator auth dependency
    "bittensor>=6.9.0,<10.0.0",
    # Form data support
    "python-multipart>=0.0.6",
]

# [project.scripts] removed - using bash scripts instead

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.hatch.build.targets.sdist]
include = ["app", "scripts"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 200
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (F401 = unused imports, etc.)
    "I",   # isort (import sorting)
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
